Completed Project 2 Part 2 Authentication
