# middleware/authenticate.js
@@ -1,0 +1,34 @@
+const jwt = require('jsonwebtoken');
+
+const authenticate = (req, res, next) => {
+
+  const authHeader = req.headers.authorization;
+
+  if (!authHeader) {
+    return res.status(401).json({
+      message: 'Access denied'
+    });
+  }
+
+  const token = authHeader.split(' ')[1];
+
+  try {
+
+    const verified = jwt.verify(
+      token,
+      process.env.JWT_SECRET
+    );
+
+    req.user = verified;
+
+    next();
+
+  } catch (err) {
+
+    res.status(401).json({
+      message: 'Invalid token'
+    });
+  }
+};
+
+module.exports = authenticate;
