# routes/auth.js
@@ -1,0 +1,14 @@
+const router = require('express').Router();
+
+const authController = require('../controllers/authController');
+
+router.post('/register', authController.registerUser);
+
+router.post('/login', authController.loginUser);
+
+router.post('/logout', (req, res) => {
+  res.clearCookie('token');
+  res.json({ message: 'Logged out successfully' });
+});
+
+module.exports = router;
